<resources>
    <string name="app_name">SE9</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_enterphonenumber">شماره موبایل خود را وارد کنید</string>
    <string name="confirm">تایید</string>
    <string name="closed">بستن</string>
    <string name="enter_activationcode">کد فعالسازی را وارد کنید</string>
    <string name="resend_activationcode"><u>ارسال مجدد کد فعالسازی</u></string>
    <string name="send_activationcode">کد فعالسازی برای شما ارسال شد</string>
    <string name="enter_compelete_data">اطلاعات را کامل وارد کنید</string>
    <string name="enter_min_password">حداقل تعداد رمز عبور 4 می باشد</string>
    <string name="create_password">ساخت رمز عبور</string>
    <string name="confirmpassword">تعریف مجدد رمز عبور</string>
    <string name="password">رمز عبور</string>
    <string name="mistake_enter_data">اطلاعات وارد شده اشتباه است</string>
    <string name="www_gapcom_ir">www.gapcom.ir</string>
    <string name="my_text"><u>ویرایش شماره تلفن همراه</u></string>
    <string name="forget_pass"><u>فراموشی رمز عبور</u></string>
    <string name="reserve_code">کد نوبت :</string>
    <string name="reseption_code">کد پذیرش :</string>
    <string name="guide_active_pass">با استفاده از این گزینه می توانید گذرواژه خود را برای ورود به برنامه، فعال یا غیر فعال کنید</string>
    <string name="guide_recept">برای ثبت اطلاعات پذیرش وارد این قسمت شوید</string>
    <string name="guide_enter_exit">برای ثبت ورود و خروج خودرو وارد این قسمت شوید</string>
    <string name="guide_update">برای دانلود و بروز رسانی این گزینه را انتخاب کنید</string>
    <string name="guide_menu">با استفاده از این گزینه میتوانید منوی برنامه را باز کرده و گزینه مورد نظر را انتخاب کنید</string>
    <string name="guide_detect_plate_auto">با استفاده از این گزینه میتوانید پلاک خودروی مورد نظر را با دوربین بصورت خودکار وارد کنید</string>
    <string name="guide_detect_plate_hand">با استفاده از این گزینه میتوانید اطلاعات خودرو را بصورت دستی وارد کنید</string>
    <string name="guide_recept_list">با استفاده از این گزینه میتوانید اطلاعات خودروهایی که پذیرش شده اند را ببینید</string>
    <string name="guide_btn_list">با استفاده از این گزینه ها می توانید اظهارات کارشناس و اظهارات مشتری را ثبت کنید</string>
    <string name="incorrect_pass">رمز عبور اشتباه است</string>
    <string name="please_wait"> لطفا منتظر بمانید... </string>
    <string name="please_wait_for_download">در حال دانلود، لطفا منتظر بمانید... </string>
    <string name="description"> توضیحات </string>
    <string name="record_expert_voic"> رکورد صدای کارشناس </string>
    <string name="minimum_second_for_record_vois"> حداقل صدای ضبط شده 10 ثانیه می باشد </string>
    <string name="record_voice_is_run"> در حال رکورد صدا... </string>
    <string name="necessary_add_customer_voice">افزودن صدای مشتری الزامیست</string>
    <string name="necessary_add_sign">افزودن امضاء الزامیست</string>
    <string name="necessary_add_pic_front">تصویر جلوی خودرو الزامیست</string>
    <string name="necessary_add_pic_right">تصویر سمت راست خودرو الزامیست</string>
    <string name="necessary_add_pic_back">تصویر سمت چپ خودرو الزامیست</string>
    <string name="necessary_add_pic_left">تصویر عقب خودرو الزامیست</string>
    <string name="necessary_add_pic_km">تصویر کیلومتر خودرو الزامیست</string>
    <string name="success_request">در خواست با موفقیت انجام شد</string>
    <string name="edit">ویرایش</string>
    <string name="pic_view">مشاهده تصاویر</string>
    <string name="pic_edit">ویرایش تصاویر</string>
    <string name="edit_data">ویرایش اظهارات</string>
    <string name="plate_number">شماره پلاک : </string>
    <string name="chassiss_number">شماره شاسی : </string>
    <string name="enter_full_plate_number">شماره پلاک را کامل وارد کنید </string>
    <string name="car_color"> رنگ خودرو : </string>
    <string name="car_type">  نوع خودرو : </string>
    <string name="request_id">  درخواست با شناسه کار </string>
    <string name="necessary_add_attach">  افزودن فایل پیوست الزامیست </string>
    <string name="success_attach">  پیوست با موفقیت ثبت شد </string>
    <string name="select_enter_type">  نوع ورود را مشخص کنید </string>
    <string name="select_car_type">  نوع خودرو را مشخص کنید </string>
    <string name="registered">  ثبت شد </string>
    <string name="download_guide_one"><u>دانلود فایل راهنما</u></string>
    <string name="guide_detect_plate"><u>دانلود فایل راهنما</u></string>
    <string name="showcase_download_guide">با استفاده از این لینک می توانید فایل راهنمای مربوط به این قسمت را دانلود کنید</string>
    <string name="showcase_event_list">با استفاده از این گزینه می توانید لیست خودروهای بلاتکلیف را مشاهده کنید</string>
    <string name="invalid_code">درخواست نامعتبر، مدت زمان کد فعالسازی منقضی شده است </string>
    <string name="invalid_car">خودرو یافت نشد</string>


</resources>