<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/menu_background">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/pino_four" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="50dp"
                android:src="@drawable/login" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:orientation="vertical">


                <com.example.sino.utils.textwidget.CustomTextViewTitle
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:text="@string/create_password"
                    android:textColor="@color/mdtp_transparent_black"
                    android:textColorHint="@color/mdtp_transparent_black"
                    android:textSize="14sp" />

                <com.example.sino.utils.textwidget.CustomEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/bg_text_request"
                    android:gravity="center"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/mdtp_transparent_black"
                    android:textColorHint="@color/mdtp_transparent_black"
                    android:textSize="14sp" />

                <com.example.sino.utils.textwidget.CustomEditText
                    android:id="@+id/confirmPassword"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/bg_text_request"
                    android:gravity="center"
                    android:hint="@string/confirmpassword"
                    android:inputType="textPassword"
                    android:textColor="@color/mdtp_transparent_black"
                    android:textColorHint="@color/mdtp_transparent_black"
                    android:textSize="14sp" />

                <com.example.sino.utils.textwidget.CustomTextViewTitle
                    android:id="@+id/btn_confirm"
                    android:layout_width="200dp"
                    android:layout_height="50dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_margin="30dp"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:padding="12dp"
                    android:text="@string/confirm"
                    android:textColor="@color/mdtp_transparent_black"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtEdit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="24dp"
                    android:text="@string/my_text"
                    android:textColor="@color/royal_blue"
                    android:textSize="18sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="70dp"
                android:layout_height="80dp"
                android:layout_above="@+id/txt_site"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="24dp"
                android:src="@drawable/sinoempty" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_site"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="24dp"
                android:text="gapcom.ir"
                android:textColor="@color/mdtp_transparent_black"
                android:textSize="18sp" />

        </RelativeLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>