<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".view.fragment.enterexit.ResultManageEEFragment">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardResultOk"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:visibility="visible">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="right">

                <com.example.sino.utils.textwidget.CustomTextViewTitleLight
                    android:id="@+id/txt_plate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="right"
                    android:text="@string/plate_number" />

                <com.example.sino.utils.textwidget.CustomTextViewTitleLight
                    android:id="@+id/txt_chassiss"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="right"
                    android:text="@string/chassiss_number" />

                <com.example.sino.utils.textwidget.CustomTextViewTitleLight
                    android:id="@+id/txt_carType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"
                    android:layout_gravity="right"
                    android:text="@string/car_type" />

                <com.example.sino.utils.textwidget.CustomTextViewTitleLight
                    android:id="@+id/txt_color"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_gravity="right"
                    android:layout_marginEnd="16dp"
                    android:text="رنگ خودرو" />


                <com.example.sino.utils.textwidget.CustomEditText
                    android:id="@+id/edt_descriptionOne"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginTop="24dp"
                    android:background="@drawable/bg_text_request"
                    android:gravity="right"
                    android:hint="@string/description"
                    android:padding="5dp"
                    android:textSize="14sp"
                    android:inputType="textMultiLine"
                    android:scrollbars="vertical" />

                <com.example.sino.utils.textwidget.CustomTextViewTitle
                    android:id="@+id/btn_confirmOne"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/bg_button"
                    android:gravity="center"
                    android:paddingStart="20dp"
                    android:paddingEnd="20dp"
                    android:text="ثبت"
                    android:textColor="@color/mdtp_red_focused"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>


        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cardNoResult"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_margin="10dp"
            android:visibility="gone">

          <LinearLayout
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

              <com.example.sino.utils.textwidget.CustomTextViewTitleLight
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="right"
                  android:text="@string/car_type"/>

              <RadioGroup
                  android:id="@+id/selected_car_type_one"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:checkedButton="@+id/r_btn_day"
                  android:layout_gravity="right"
                  android:orientation="horizontal">

                  <RadioButton
                      android:id="@+id/radioButtonTruckSemi"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="کامیونت"
                      android:theme="@style/MyRadioButtonReport"
                      android:textSize="18sp"
                      android:layout_margin="10dp"/>

                  <RadioButton
                      android:id="@+id/radioButtonTruck"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:checked="true"
                      android:text="کامیون"
                      android:textSize="18sp"
                      android:theme="@style/MyRadioButtonReport"
                      android:layout_margin="10dp"/>

              </RadioGroup>

              <RadioGroup
                  android:id="@+id/selected_car_type_two"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:checkedButton="@+id/r_btn_day"
                  android:layout_gravity="right"
                  android:orientation="horizontal">

                  <RadioButton
                      android:id="@+id/radioButtonVan"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="ون"
                      android:theme="@style/MyRadioButtonReport"
                      android:textSize="18sp"
                      android:layout_margin="10dp"/>

                  <RadioButton
                      android:id="@+id/radioButtonMiniBus"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="مینی بوس"
                      android:theme="@style/MyRadioButtonReport"
                      android:textSize="18sp"
                      android:layout_margin="10dp"/>

                  <RadioButton
                      android:id="@+id/radioButtonBus"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="اتوبوس"
                      android:textSize="18sp"
                      android:theme="@style/MyRadioButtonReport"
                      android:layout_margin="10dp"/>

              </RadioGroup>

              <RadioGroup
                  android:id="@+id/selected_car_type_three"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:checkedButton="@+id/r_btn_day"
                  android:layout_gravity="right"
                  android:orientation="horizontal">

                  <RadioButton
                      android:id="@+id/radioButtonSedan"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="سواری"
                      android:theme="@style/MyRadioButtonReport"
                      android:textSize="18sp"
                      android:layout_margin="10dp"/>

                  <RadioButton
                      android:id="@+id/radioButtonPickup"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="پیکاپ"
                      android:textSize="18sp"
                      android:theme="@style/MyRadioButtonReport"
                      android:layout_margin="10dp"/>

              </RadioGroup>



              <com.example.sino.utils.textwidget.CustomTextViewTitleLight
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_gravity="right"
                  android:layout_marginTop="30dp"
                  android:text="نوع ورود"/>


              <RadioGroup
                  android:id="@+id/selected_enter_type_three"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:checkedButton="@+id/r_btn_day"
                  android:layout_gravity="right"
                  android:orientation="horizontal">

                  <RadioButton
                      android:id="@+id/radioButtonSecurityCar"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="خودرو امانی"
                      android:theme="@style/MyRadioButtonReport"
                      android:textSize="18sp"
                      android:layout_margin="10dp"/>


                  <RadioButton
                      android:id="@+id/radioButtonGuest"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:layout_margin="10dp"
                      android:text="مهمان"
                      android:textSize="18sp"
                      android:theme="@style/MyRadioButtonReport" />

                  <RadioButton
                      android:id="@+id/radioButtonRepair"
                      android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:text="تعمیرات"
                      android:textSize="18sp"
                      android:checked="true"
                      android:theme="@style/MyRadioButtonReport"
                      android:layout_margin="10dp"/>

              </RadioGroup>


              <com.example.sino.utils.textwidget.CustomEditText
                  android:id="@+id/edt_descriptionTwo"
                  android:layout_width="match_parent"
                  android:layout_height="200dp"
                  android:layout_marginTop="24dp"
                  android:background="@drawable/bg_text_request"
                  android:gravity="right"
                  android:hint="@string/description"
                  android:padding="5dp"
                  android:textSize="14sp"
                  android:inputType="textMultiLine"
                  android:scrollbars="vertical" />


              <com.example.sino.utils.textwidget.CustomTextViewTitle
                  android:id="@+id/btn_confirmTwo"
                  android:layout_width="match_parent"
                  android:layout_height="60dp"
                  android:layout_marginStart="10dp"
                  android:layout_marginTop="30dp"
                  android:layout_marginEnd="10dp"
                  android:layout_marginBottom="10dp"
                  android:background="@drawable/bg_button"
                  android:gravity="center"
                  android:paddingStart="20dp"
                  android:paddingEnd="20dp"
                  android:text="ثبت"
                  android:textColor="@color/mdtp_red_focused"
                  android:textSize="20sp"
                  android:textStyle="bold" />

          </LinearLayout>





        </androidx.cardview.widget.CardView>


    </LinearLayout>
</layout>